--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-live-clock": "^3.1.0",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "watson-developer-cloud": "^3.18.1"
   },
   "scripts": {
     "start": "react-scripts start",
