--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-live-clock": "^3.1.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "watson-developer-cloud": "^3.18.1"
   },
