--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-live-clock": "^3.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-transition-group": "^1.2.1",
     "watson-developer-cloud": "^3.18.1"
   },
   "scripts": {
